--- a/ts3server_config.ini
+++ b/ts3server_config.ini
@@ -1,16 +1,21 @@
 machine_id=
 default_voice_port=9987
 voice_ip=0.0.0.0
-licensepath=
+licensepath=license/
 filetransfer_port=30033
 filetransfer_ip=0.0.0.0
-query_port=10011
-query_ip=0.0.0.0
-dbplugin=ts3db_sqlite3
-dbpluginparameter=
+query_port=
+query_ip=
+query_ip_whitelist=query_ip_whitelist.txt
+query_ip_blacklist=query_ip_blacklist.txt
 dbsqlpath=sql/
-dbsqlcreatepath=create_sqlite/
-logpath=logs/
+dbplugin=ts3db_mariadb
+dbsqlcreatepath=create_mariadb/
+dbpluginparameter=ts3db_mariadb.ini
+dbconnections=10
+logpath=logs
 logquerycommands=0
-dbclientkeepdays=90
+dbclientkeepdays=30
 logappend=1
+query_skipbruteforcecheck=0
+query_protocols=
