--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,58 +1,50 @@
 name: Publish Image
 
-on:
-  release:
-    types: published
-
-env:
-  IMAGE_NAME: teamspeak
+on: [push]
 
 jobs:
-  github_package:
+  github_registry:
+    name: Publish to GitHub Cointainer Registry
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      
-      - uses: crazy-max/ghaction-docker-buildx@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Docker Setup QEMU
+        uses: docker/setup-qemu-action@v1.2.0
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v1.5.1
+      - name: Docker Login
+        uses: docker/login-action@v1.10.0
         with:
-          buildx-version: latest
-          qemu-version: latest
-
-      - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
-
-      - name: Log into registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
-
-      - name: Push image
-        run: |
-          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
-
+          register: ghcr.io
+          username: ${{ GITHUB.ACTOR }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v2.7.0
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          push: true
+          tags: ${{ GITHUB.REPOSITORY }}:latest
   docker_hub:
+    name: Publish to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: crazy-max/ghaction-docker-buildx@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Docker Setup QEMU
+        uses: docker/setup-qemu-action@v1.2.0
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v1.5.1
+      - name: Docker Login
+        uses: docker/login-action@v1.10.0
         with:
-          buildx-version: latest
-          qemu-version: latest
-
-      - name: Build image
-        run: |
-          echo "${{ secrets.DOCKER }}" | docker login --username carlgo11 --password-stdin
-          docker buildx create --use
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          echo IMAGE_NAME=$IMAGE_NAME
-          echo VERSION=$VERSION
-          docker buildx build --platform linux/amd64 --rm --tag carlgo11/$IMAGE_NAME:latest --tag carlgo11/$IMAGE_NAME:$VERSION --push --compress .
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v2.7.0
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          push: true
+          tags: carlgo11/teamspeak:latest
