--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v1.10.0
         with:
-          register: ghcr.io
+          registry: ghcr.io
           username: ${{ GITHUB.ACTOR }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker images
