--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,42 +9,27 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: Docker Setup QEMU
+      - name: Setup Docker QEMU
         uses: docker/setup-qemu-action@v1.2.0
-      - name: Docker Setup Buildx
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1.5.1
-      - name: Docker Login
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1.10.0
         with:
           registry: ghcr.io
           username: ${{ GITHUB.ACTOR }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v2.7.0
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm/v7,linux/arm64
-          push: true
-          tags: ${{ GITHUB.REPOSITORY }}:latest
-  docker_hub:
-    name: Publish to Docker Hub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Docker Setup QEMU
-        uses: docker/setup-qemu-action@v1.2.0
-      - name: Docker Setup Buildx
-        uses: docker/setup-buildx-action@v1.5.1
-      - name: Docker Login
+      - name: Login to Docker Hub
         uses: docker/login-action@v1.10.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push Docker images
+      - name: Build and Push
         uses: docker/build-push-action@v2.7.0
         with:
           context: .
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: true
-          tags: carlgo11/teamspeak:latest
+          tags: |
+            carlgo11/teamspeak:latest
+            ghcr.io/carlgo11/teamspeak-docker:latest
