--- a/examples/mariadb/docker-compose.yml
+++ b/examples/mariadb/docker-compose.yml
@@ -1,13 +1,35 @@
 version: "3"
 services:
+
+  db:
+    image: mariadb
+    container_name: teamspeak_db
+    restart: unless-stopped
+    volumes:
+      - db:/var/lib/mysql
+    environment:
+      MARIADB_RANDOM_ROOT_PASSWORD: 1
+      MARIADB_DATABASE: teamspeak
+      MARIADB_USER: teamspeak
+      MARIADB_PASSWORD: teamspeak
+
   teamspeak:
     image: carlgo11/teamspeak
+    container_name: teamspeak_server
+    restart: unless-stopped
     ports:
-    - "9987:9987/udp" # VOIP
-    - "30033:30033/tcp" # File Transfer
+      - "9987:9987/udp" # VOIP
+      - "30033:30033/tcp" # File Transfer
     volumes:
-    - ./ts3server_config.ini:/teamspeak/ts3server.ini:ro
-    - ./ts3db_mariadb.ini:/teamspeak/ts3db_mariadb.ini:ro
-    - /var/run/mysqld/:/var/run/mysqld/
-    - ./files/:/teamspeak/files
-    restart: always
+      - "./ts3server_config.ini:/teamspeak/ts3server.ini:ro"
+      - "files:/teamspeak/files"
+    environment:
+      MARIADB_HOST: db
+      MARIADB_PORT: 3306
+      MARIADB_USER: teamspeak
+      MARIADB_PASSWORD: teamspeak
+      MARIADB_DATABASE: teamspeak
+
+volumes:
+  db:
+  files:
