--- a/examples/sqlite/docker-compose.yml
+++ b/examples/sqlite/docker-compose.yml
@@ -1,12 +1,17 @@
-version: "3.2"
+version: "3"
 services:
+
   teamspeak:
     image: carlgo11/teamspeak
+    container_name: teamspeak_server
+    restart: unless-stopped
     ports:
-    - "9987:9987/udp" # VOIP
-    - "30033:30033/tcp" # File Transfer
+      - "9987:9987/udp" # VOIP
+      - "30033:30033/tcp" # File Transfer
     volumes:
-    - ./ts3server_config.ini:/teamspeak/ts3server.ini:ro
-    - ./ts3server.sqlitedb:/teamspeak/ts3server.sqlitedb
-    - ./files/:/teamspeak/files
-    restart: always
+      - "./ts3server_config.ini:/teamspeak/ts3server.ini:ro"
+      - "./ts3server.sqlitedb:/teamspeak/ts3server.sqlitedb"
+      - "files:/teamspeak/files"
+
+volumes:
+  files:
