Push new version

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,4 +32,4 @@ jobs:
           push: true
           tags: |
             carlgo11/teamspeak:latest
-            ghcr.io/carlgo11/teamspeak-docker:latest
+            ghcr.io/carlgo11/teamspeak:latest
