--- a/example/ts3server_config.ini
+++ b/example/ts3server_config.ini
@@ -6,14 +6,16 @@ filetransfer_port=30033
 filetransfer_ip=0.0.0.0
 query_port=10011
 query_ip=
-query_ip_allowlist=query_ip_whitelist.txt
-query_ip_denylist=query_ip_blacklist.txt
+query_ip_allowlist=/tmp/query_ip_whitelist.txt
+query_ip_denylist=/tmp/query_ip_blocklist.txt
 dbsqlpath=sql/
-dbplugin=ts3db_sqlite3
-dbsqlcreatepath=create_sqlite/
+dbplugin=ts3db_mariadb
+dbsqlcreatepath=create_mariadb/
+dbpluginparameter=ts3db_mariadb.ini
 dbconnections=10
 logpath=logs
 logquerycommands=0
 dbclientkeepdays=30
 logappend=1
 query_skipbruteforcecheck=0
+query_protocols=
